# rustvpn

./: .gitignore  CHANGELOG.md  CHANGES.md  CLAUDE.md  Dockerfile.android  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/agents/: README.md  analyst.md  architect.md  kotlin-dev.md  rust-dev.md  tester.md  ui-dev.md  vpn-specialist.md
.claude/commands/: dev-docs.md
.claude/hooks/: lint-frontend.sh  lint-rust.sh  post-tool-use-tracker.sh  stop-test-check.sh
.claude/skills/: skill-rules.json
.claude/skills/lint/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/rust-dev-guidelines/: SKILL.md
.claude/skills/svelte-dev-guidelines/: SKILL.md
.github/workflows/: android-test.yml  build.yml  debug-apk.yml  release.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  XRAY_CONFIG.md
polkit/: com.rustvpn.vpn.policy
scripts/: build-libv2ray-aar.sh  download-android-binaries.sh  download-xray.sh  install-helper.sh  rustvpn-helper
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  network.rs  proxy.rs  storage.rs  tray.rs  tun.rs  uri.rs  warp.rs  xray.rs
src-tauri/tauri-plugin-vpn/: Cargo.toml  build.rs
src-tauri/tauri-plugin-vpn/android/: build.gradle.kts
src-tauri/tauri-plugin-vpn/android/src/main/: AndroidManifest.xml
src-tauri/tauri-plugin-vpn/android/src/main/aidl/com/rustvpn/vpn/: IVpnService.aidl
src-tauri/tauri-plugin-vpn/android/src/main/cpp/: CMakeLists.txt  hev_jni.c  tun_helper.c
src-tauri/tauri-plugin-vpn/android/src/main/java/com/rustvpn/vpn/: HevTunnel.kt  RustVpnService.kt  TunHelper.kt  VpnPlugin.kt
src-tauri/tauri-plugin-vpn/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-vpn/permissions/autogenerated/commands/: open_oem_background_settings.toml  query_stats.toml  request_ignore_battery_optimization.toml
src-tauri/tauri-plugin-vpn/permissions/schemas/: schema.json
src-tauri/tauri-plugin-vpn/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
src/lib/api/: tauri.ts
src/routes/: +layout.svelte  +page.svelte
(+24 files in other folders)
