[package]
name = "rustvpn"
version = "0.8.0"
description = "VPN client using VLESS+REALITY protocol"
authors = ["danila"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "rustvpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
base64 = "0.22"
tauri-plugin-vpn = { path = "./tauri-plugin-vpn" }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-shell = "2"
