[package]
name = "tauri-plugin-vpn"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-vpn"

[dependencies]
tauri = "2.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
